--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <div class="model-background hide-model">
         <div class="modelBox">
-            <img class="close-button" src="assets/close-model.svg" />
+            <img class="close-button" src="assets/svg/close-model.svg" />
             <div class="model-contents">
                 <div class="mail-form">
                     <div class="main-heading">Send Us A Message</div>
@@ -44,7 +44,7 @@
                 <div id="contact-info">
                     <div class="main-heading">Contact Information</div>
                     <div id="location">
-                        <img class="contact-icon" src="assets/location-black.svg" alt="Location Icon" />
+                        <img class="contact-icon" src="assets/svg/location-black.svg" alt="Location Icon" />
                         <div class="contact-details">
                             <div class="detail-title model-style">Address</div>
                             <div class="detail-subtitle model-style">29 - B, RABINDRA SARANI, 3RD FLOOR, SUITE
@@ -56,23 +56,23 @@
                         </div>
                     </div>
                     <div id="call-us">
-                        <img class="contact-icon" src="assets/phone-black.svg" alt="Location Icon" />
+                        <img class="contact-icon" src="assets/svg/phone-black.svg" alt="Location Icon" />
                         <div class="contact-details">
                             <div class="detail-title model-style">Call Us</div>
                             <div class="detail-subtitle model-style">+91-70001 62913</div>
                         </div>
                     </div>
                     <div id="email-us">
-                        <img class="contact-icon" src="assets/email-black.svg" alt="Location Icon" />
+                        <img class="contact-icon" src="assets/svg/email-black.svg" alt="Location Icon" />
                         <div class="contact-details">
                             <div class="detail-title model-style">Email Us</div>
                             <div class="detail-subtitle model-style">sara.sanders@gmail.com</div>
                         </div>
                     </div>
                     <div class="model-social-links">
-                        <img class="model-social-icon" src="assets/whatsapp-model-icon.svg" alt="Whatsapp Icon" />
-                        <img class="model-social-icon" src="assets/insta-model-icon.svg" alt="Instagram Icon" />
-                        <img class="model-social-icon" src="assets/facebook-model-icon.svg" alt="Facebook Icon" />
+                        <img class="model-social-icon" src="assets/svg/whatsapp-model-icon.svg" alt="Whatsapp Icon" />
+                        <img class="model-social-icon" src="assets/svg/insta-model-icon.svg" alt="Instagram Icon" />
+                        <img class="model-social-icon" src="assets/svg/facebook-model-icon.svg" alt="Facebook Icon" />
                     </div>
                 </div>
             </div>
@@ -82,16 +82,16 @@
     <div id="first-body">
         <header>
             <img id="header-logo" src="assets/Logo.png" alt="Bhawani Decorators Logo">
-            <img id="header-title" style="cursor: unset;" src="assets/Title.svg" alt="Title of Page">
+            <img id="header-title" style="cursor: unset;" src="assets/svg/Title.svg" alt="Title of Page">
             <div id="header-nav">
                 <a class="nav-links" href="pages/product&service.html">Services</a>&nbsp;&nbsp;
                 <a class="nav-links" href="pages/gallery.html">Gallery</a>&nbsp;&nbsp;
                 <a class="nav-links" href="pages/about.html">About Us</a>&nbsp;&nbsp;
-                <img id="burger-menu" src="assets/burget-menu.svg" alt="Burger Menu Icon">
+                <img id="burger-menu" src="assets/svg/burget-menu.svg" alt="Burger Menu Icon">
             </div>
         </header>
         <div id="content-body">
-            <img id="hero-section-logo" src="assets/hero-section-logo.svg">
+            <img id="hero-section-logo" src="assets/svg/hero-section-logo.svg">
             <div id="left-side">
                 <div id="text-binding">
                     <div>Your Home Is Beautiful,</div>
@@ -100,7 +100,8 @@
                         elementum. Bibendum auctor at lacinia congue risus posuere. Ultrices .</p>
                 </div>
                 <div id="container-button">
-                    <button type="button" onclick="redirectTo('')">See Products</button>
+                    <button type="button" onclick="redirectTo('pages/product&service.html#our-products')">See
+                        Products</button>
                     <button type="button" class="contact-us-btn">Contact Us</button>
                 </div>
             </div>
@@ -189,7 +190,7 @@
         <div id="service-container">
             <div class="service-items">
                 <div class="service-items-title">
-                    <img class="service-items-title-icon" src="assets/bx_cart.svg" alt="Products Icon" />
+                    <img class="service-items-title-icon" src="assets/svg/bx_cart.svg" alt="Products Icon" />
                     <div class="service-items-title-text">Products</div>
                 </div>
                 <div class="service-items-desc">We have products that changes the way your home feels your Home wont be
@@ -197,7 +198,7 @@
             </div>
             <div class="service-items">
                 <div class="service-items-title">
-                    <img class="service-items-title-icon" src="assets/ep_service.svg" alt="Services Icon" />
+                    <img class="service-items-title-icon" src="assets/svg/ep_service.svg" alt="Services Icon" />
                     <div class="service-items-title-text">Services</div>
                 </div>
                 <div class="service-items-desc">We have products that changes the way your home feels your Home wont be
@@ -215,24 +216,24 @@
             </div>
         </div>
         <div class="portrait-images">
-            <img src="assets/Previous.svg" class="slide-btn float-btn-left btn-main" onclick="workImage(-1)" />
+            <img src="assets/svg/Previous.svg" class="slide-btn float-btn-left btn-main" onclick="workImage(-1)" />
             <div class="portrait-images-box">
-                <img class="images first-image" src="assets/portrait-img-01.png" alt="Image">
-                <img class="images" src="assets/portrait-img-02.png" alt="Image">
-                <img class="images" src="assets/portrait-img-03.png" alt="Image">
-                <img class="images" src="assets/portrait-img-04.png" alt="Image">
-                <img class="images" src="assets/portrait-img-05.png" alt="Image">
-                <img class="images" src="assets/portrait-img-01.png" alt="Image">
-                <img class="images" src="assets/portrait-img-02.png" alt="Image">
-                <img class="images" src="assets/portrait-img-03.png" alt="Image">
-                <img class="images" src="assets/portrait-img-04.png" alt="Image">
-                <img class="images" src="assets/portrait-img-05.png" alt="Image">
+                <img class="images first-image" src="assets/portrait-images/mobile-image-01.jpg" alt="Image">
+                <img class="images" src="assets/portrait-images/mobile-image-02.jpg" alt="Image">
+                <img class="images" src="assets/portrait-images/mobile-image-03.jpg" alt="Image">
+                <img class="images" src="assets/portrait-images/mobile-image-04.jpg" alt="Image">
+                <img class="images" src="assets/portrait-images/mobile-image-05.jpg" alt="Image">
+                <img class="images" src="assets/portrait-images/mobile-image-06.jpg" alt="Image">
+                <img class="images" src="assets/portrait-images/mobile-image-07.jpg" alt="Image">
+                <img class="images" src="assets/portrait-images/mobile-image-08.jpg" alt="Image">
+                <img class="images" src="assets/portrait-images/mobile-image-09.jpg" alt="Image">
+                <img class="images" src="assets/portrait-images/mobile-image-10.jpg" alt="Image">
                 <div class="btn-mobile" style="display: none;">
-                    <img src="assets/Previous.svg" class="slide-btn float-btn-left" onclick="workImage(-1)" />
-                    <img src="assets/Next.svg" class="slide-btn float-btn-right" onclick="workImage(1)" />
+                    <img src="assets/svg/Previous.svg" class="slide-btn float-btn-left" onclick="workImage(-1)" />
+                    <img src="assets/svg/Next.svg" class="slide-btn float-btn-right" onclick="workImage(1)" />
                 </div>
             </div>
-            <img src="assets/Next.svg" class="slide-btn float-btn-right btn-main" onclick="workImage(1)" />
+            <img src="assets/svg/Next.svg" class="slide-btn float-btn-right btn-main" onclick="workImage(1)" />
         </div>
         <a class="see-more-buttons" href="pages/gallery.html">See All Images</a>
     </div>
@@ -243,7 +244,7 @@
         <div id="footer-links">
             <div id="contact">
                 <div id="location">
-                    <img class="contact-icon" src="assets/location.svg" alt="Location Icon" />
+                    <img class="contact-icon" src="assets/svg/location.svg" alt="Location Icon" />
                     <div class="contact-details">
                         <div class="detail-title">Address</div>
                         <div class="detail-subtitle">29 - B, RABINDRA SARANI, 3RD FLOOR, SUITE 11(W) KOLKATA - 700 073,
@@ -252,14 +253,14 @@
                     </div>
                 </div>
                 <div id="call-us">
-                    <img class="contact-icon" src="assets/phone.svg" alt="Location Icon" />
+                    <img class="contact-icon" src="assets/svg/phone.svg" alt="Location Icon" />
                     <div class="contact-details">
                         <div class="detail-title">Call Us</div>
                         <div class="detail-subtitle">+91-70001 62913</div>
                     </div>
                 </div>
                 <div id="email-us">
-                    <img class="contact-icon" src="assets/email.svg" alt="Location Icon" />
+                    <img class="contact-icon" src="assets/svg/email.svg" alt="Location Icon" />
                     <div class="contact-details">
                         <div class="detail-title">Email Us</div>
                         <div class="detail-subtitle">sara.sanders@gmail.com</div>
@@ -269,25 +270,26 @@
             <div id="social-links">
                 <div id="social-links-title">Social Links</div>
                 <div id="whatsapp">
-                    <img class="social-icon" src="assets/whatsapp.svg">
+                    <img class="social-icon" src="assets/svg/whatsapp.svg">
                     <a class="social-link-name" href="#">WhatsApp</a>
                 </div>
                 <div id="instagram">
-                    <img class="social-icon" src="assets/instagram.svg">
-                    <a class="social-link-name" href="#">Instagram</a>
+                    <img class="social-icon" src="assets/svg/instagram.svg">
+                    <a class="social-link-name" href="https://www.instagram.com/bhawanidecorators/">Instagram</a>
                 </div>
                 <div id="facebook">
-                    <img class="social-icon" src="assets/facebook.svg">
+                    <img class="social-icon" src="assets/svg/facebook.svg">
                     <a class="social-link-name" href="#">Facebook</a>
                 </div>
             </div>
             <div id="quick-links">
                 <a id="quick-links-title">Quick Links</a>
-                <a class="quick-link-name" href="">Home</a>
-                <a class="quick-link-name" href="">Contact Us</a>
-                <a class="quick-link-name" href="">Our Products</a>
-                <a class="quick-link-name" href="">About Us</a>
-                <a class="quick-link-name" href="">Our Services</a>
+                <a class="quick-link-name" onclick="redirectHome()">Home</a>
+                <a class="quick-link-name" onclick="toggleModel()">Contact Us</a>
+                <a class="quick-link-name" onclick="redirectTo('pages/product&service.html#our-products')">Our
+                    Products</a>
+                <a class="quick-link-name" onclick="redirectTo('pages/about.html')">About Us</a>
+                <a class="quick-link-name" onclick="redirectTo('pages/product&service.html')">Our Services</a>
             </div>
         </div>
         <div id="copyright-claims">Copyright @2022 Bhawani Decorators, All Right Reserved. Design and Developed by
@@ -300,3 +302,5 @@
 </body>
 
 </html>
+<!--<meta name="google-site-verification" content="uDpw7b__U7Xbh7JdTiUif3XSQkkmNq_JPDOw7Oy3wVI" />-->
+<!--google-site-verification=zHjUBhWO9zCrQFOqO25ElwCORf9wwxzDV5SHdKFfJoQ-->
