--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -22,19 +22,19 @@
 
 <body>
     <header>
-        <img id="header-logo" src="../assets/Logo.svg" alt="Bhawani Decorators Logo">
-        <img id="header-title" onclick="redirectHome()" src="../assets/Title.svg" alt="Title of Page">
+        <img id="header-logo" src="../assets/svg/Logo.svg" alt="Bhawani Decorators Logo">
+        <img id="header-title" onclick="redirectHome()" src="../assets/svg/Title.svg" alt="Title of Page">
         <div id="header-nav">
             <a class="nav-links" href="product&service.html">Services</a>&nbsp;&nbsp;
             <a class="nav-links" href="gallery.html">Gallery</a>&nbsp;&nbsp;
             <a class="nav-links" href="about.html">About Us</a>&nbsp;&nbsp;
-            <img id="burger-menu" src="../assets/burget-menu.svg" alt="Burger Menu Icon">
+            <img id="burger-menu" src="../assets/svg/burget-menu.svg" alt="Burger Menu Icon">
         </div>
     </header>
 
     <div id="hero-section">
         <div id="hero-section-heading">
-            <img id="hero-section-logo" src="../assets/hero-section-logo.svg">
+            <img id="hero-section-logo" src="../assets/svg/hero-section-logo.svg">
             <div id="services-title">Gallery</div>&nbsp;
             <div id="services-subtitle">Some of our works are shown here, we hope you will like it.</div>
         </div>
@@ -42,7 +42,7 @@
     <div id="hero-divider"></div>
 
     <div class="landscape-images">
-        <img src="../assets/Previous.svg" class="slide-btn slide-btn-left" onclick="plusDivs(-1)" />
+        <img src="../assets/svg/Previous.svg" class="slide-btn slide-btn-left" onclick="plusDivs(-1)" />
         <div class=".images-box">
             <img class="mySlides" src="../assets/wide-images/desktop-img-01.jpg" style="width:100%">
             <img class="mySlides" src="../assets/wide-images/desktop-img-02.jpg" style="width:100%">
@@ -55,10 +55,8 @@
             <img class="mySlides" src="../assets/wide-images/desktop-img-09.jpg" style="width:100%">
             <img class="mySlides" src="../assets/wide-images/desktop-img-10.jpg" style="width:100%">
             <img class="mySlides" src="../assets/wide-images/desktop-img-11.jpg" style="width:100%">
-            <!-- <img class="mySlides" src="img_mountains.jpg" style="width:100%">
-            <img class="mySlides" src="img_forest.jpg" style="width:100%"> -->
         </div>
-        <img src="../assets/Next.svg" class="slide-btn slide-btn-right" onclick="plusDivs(1)" />
+        <img src="../assets/svg/Next.svg" class="slide-btn slide-btn-right" onclick="plusDivs(1)" />
     </div>
 
     <div class="work-images-slideshow">
@@ -68,25 +66,24 @@
             </div>
         </div>
         <div class="portrait-images">
-            <img src="../assets/Previous.svg" class="slide-btn float-btn-left btn-main" onclick="workImage(-1)" />
+            <img src="../assets/svg/Previous.svg" class="slide-btn float-btn-left btn-main" onclick="workImage(-1)" />
             <div class="portrait-images-box">
-                <img class="images first-image" src="../assets/portrait-img-01.png" alt="Image">
-                <img class="images" src="../assets/portrait-img-02.png" alt="Image">
-                <img class="images" src="../assets/portrait-img-03.png" alt="Image">
-                <img class="images" src="../assets/portrait-img-04.png" alt="Image">
-                <img class="images" src="../assets/portrait-img-05.png" alt="Image">
-                <img class="images" src="../assets/portrait-img-05.png" alt="Image">
-                <!-- <img class="images" src="../assets/portrait-img-01.png" alt="Image">
-                <img class="images" src="../assets/portrait-img-02.png" alt="Image">
-                <img class="images" src="../assets/portrait-img-03.png" alt="Image">
-                <img class="images" src="../assets/portrait-img-04.png" alt="Image">
-                <img class="images" src="../assets/portrait-img-05.png" alt="Image"> -->
+                <img class="images first-image" src="../assets/portrait-images/mobile-image-01.jpg" alt="Image">
+                <img class="images" src="../assets/portrait-images/mobile-image-02.jpg" alt="Image">
+                <img class="images" src="../assets/portrait-images/mobile-image-03.jpg" alt="Image">
+                <img class="images" src="../assets/portrait-images/mobile-image-04.jpg" alt="Image">
+                <img class="images" src="../assets/portrait-images/mobile-image-05.jpg" alt="Image">
+                <img class="images" src="../assets/portrait-images/mobile-image-06.jpg" alt="Image">
+                <img class="images" src="../assets/portrait-images/mobile-image-07.jpg" alt="Image">
+                <img class="images" src="../assets/portrait-images/mobile-image-08.jpg" alt="Image">
+                <img class="images" src="../assets/portrait-images/mobile-image-09.jpg" alt="Image">
+                <img class="images" src="../assets/portrait-images/mobile-image-10.jpg" alt="Image">
                 <div class="btn-mobile" style="display: none;">
-                    <img src="../assets/Previous.svg" class="slide-btn float-btn-left" onclick="workImage(-1)" />
-                    <img src="../assets/Next.svg" class="slide-btn float-btn-right" onclick="workImage(1)" />
+                    <img src="../assets/svg/Previous.svg" class="slide-btn float-btn-left" onclick="workImage(-1)" />
+                    <img src="../assets/svg/Next.svg" class="slide-btn float-btn-right" onclick="workImage(1)" />
                 </div>
             </div>
-            <img src="../assets/Next.svg" class="slide-btn float-btn-right btn-main" onclick="workImage(1)" />
+            <img src="../assets/svg/Next.svg" class="slide-btn float-btn-right btn-main" onclick="workImage(1)" />
         </div>
     </div>
 
@@ -97,25 +94,24 @@
             </div>
         </div>
         <div class="portrait-images">
-            <img src="../assets/Previous.svg" class="slide-btn float-btn-left btn-main" onclick="productImage(-1)" />
+            <img src="../assets/svg/Previous.svg" class="slide-btn float-btn-left btn-main" onclick="productImage(-1)" />
             <div class="portrait-images-box">
-                <img class="images first-image" src="../assets/portrait-img-01.png" alt="Image">
-                <img class="images" src="../assets/portrait-img-02.png" alt="Image">
-                <img class="images" src="../assets/portrait-img-03.png" alt="Image">
-                <img class="images" src="../assets/portrait-img-04.png" alt="Image">
-                <img class="images" src="../assets/portrait-img-05.png" alt="Image">
-                <img class="images" src="../assets/portrait-img-05.png" alt="Image">
-                <!-- <img class="images" src="../assets/portrait-img-01.png" alt="Image">
-                <img class="images" src="../assets/portrait-img-02.png" alt="Image">
-                <img class="images" src="../assets/portrait-img-03.png" alt="Image">
-                <img class="images" src="../assets/portrait-img-04.png" alt="Image">
-                <img class="images" src="../assets/portrait-img-05.png" alt="Image"> -->
+                <img class="images first-image" src="../assets/product-images/product-image-01.jpg" alt="Image">
+                <img class="images" src="../assets/product-images/product-image-02.jpg" alt="Image">
+                <img class="images" src="../assets/product-images/product-image-03.jpg" alt="Image">
+                <img class="images" src="../assets/product-images/product-image-04.jpg" alt="Image">
+                <img class="images" src="../assets/product-images/product-image-05.jpg" alt="Image">
+                <img class="images" src="../assets/product-images/product-image-06.jpg" alt="Image">
+                <img class="images" src="../assets/product-images/product-image-07.jpg" alt="Image">
+                <img class="images" src="../assets/product-images/product-image-08.jpg" alt="Image">
+                <img class="images" src="../assets/product-images/product-image-09.jpg" alt="Image">
+                <img class="images" src="../assets/product-images/product-image-10.jpg" alt="Image">
                 <div class="btn-mobile" style="display: none;">
-                    <img src="../assets/Previous.svg" class="slide-btn float-btn-left" onclick="productImage(-1)" />
-                    <img src="../assets/Next.svg" class="slide-btn float-btn-right" onclick="productImage(1)" />
+                    <img src="../assets/svg/Previous.svg" class="slide-btn float-btn-left" onclick="productImage(-1)" />
+                    <img src="../assets/svg/Next.svg" class="slide-btn float-btn-right" onclick="productImage(1)" />
                 </div>
             </div>
-            <img src="../assets/Next.svg" class="slide-btn float-btn-right btn-main" onclick="productImage(1)" />
+            <img src="../assets/svg/Next.svg" class="slide-btn float-btn-right btn-main" onclick="productImage(1)" />
         </div>
     </div>
 
@@ -124,7 +120,7 @@
         <div id="footer-links">
             <div id="contact">
                 <div id="location">
-                    <img class="contact-icon" src="../assets/location.svg" alt="Location Icon" />
+                    <img class="contact-icon" src="../assets/svg/location.svg" alt="Location Icon" />
                     <div class="contact-details">
                         <div class="detail-title">Address</div>
                         <div class="detail-subtitle">29 - B, RABINDRA SARANI, 3RD FLOOR, SUITE 11(W) KOLKATA - 700 073,
@@ -133,14 +129,14 @@
                     </div>
                 </div>
                 <div id="call-us">
-                    <img class="contact-icon" src="../assets/phone.svg" alt="Location Icon" />
+                    <img class="contact-icon" src="../assets/svg/phone.svg" alt="Location Icon" />
                     <div class="contact-details">
                         <div class="detail-title">Call Us</div>
                         <div class="detail-subtitle">+91-70001 62913</div>
                     </div>
                 </div>
                 <div id="email-us">
-                    <img class="contact-icon" src="../assets/email.svg" alt="Location Icon" />
+                    <img class="contact-icon" src="../assets/svg/email.svg" alt="Location Icon" />
                     <div class="contact-details">
                         <div class="detail-title">Email Us</div>
                         <div class="detail-subtitle">sara.sanders@gmail.com</div>
@@ -150,15 +146,15 @@
             <div id="social-links">
                 <div id="social-links-title">Social Links</div>
                 <div id="whatsapp">
-                    <img class="social-icon" src="../assets/whatsapp.svg">
+                    <img class="social-icon" src="../assets/svg/whatsapp.svg">
                     <a class="social-link-name" href="#">WhatsApp</a>
                 </div>
                 <div id="instagram">
-                    <img class="social-icon" src="../assets/instagram.svg">
+                    <img class="social-icon" src="../assets/svg/instagram.svg">
                     <a class="social-link-name" href="#">Instagram</a>
                 </div>
                 <div id="facebook">
-                    <img class="social-icon" src="../assets/facebook.svg">
+                    <img class="social-icon" src="../assets/svg/facebook.svg">
                     <a class="social-link-name" href="#">Facebook</a>
                 </div>
             </div>
