--- a/pages/product&service.html
+++ b/pages/product&service.html
@@ -23,18 +23,18 @@
 
 <body>
     <header>
-        <img id="header-logo" src="../assets/Logo.svg" alt="Bhawani Decorators Logo">
-        <img id="header-title" onclick="redirectHome()" src="../assets/Title.svg" alt="Title of Page">
+        <img id="header-logo" src="../assets/svg/Logo.svg" alt="Bhawani Decorators Logo">
+        <img id="header-title" onclick="redirectHome()" src="../assets/svg/Title.svg" alt="Title of Page">
         <div id="header-nav">
             <a class="nav-links" href="product&service.html">Services</a>&nbsp;&nbsp;
             <a class="nav-links" href="gallery.html">Gallery</a>&nbsp;&nbsp;
             <a class="nav-links" href="about.html">About Us</a>&nbsp;&nbsp;
-            <img id="burger-menu" src="../assets/burget-menu.svg" alt="Burger Menu Icon">
+            <img id="burger-menu" src="../assets/svg/burget-menu.svg" alt="Burger Menu Icon">
         </div>
     </header>
     <div id="hero-section">
         <div id="hero-section-heading">
-            <img id="hero-section-logo" src="../assets/hero-section-logo.svg">
+            <img id="hero-section-logo" src="../assets/svg/hero-section-logo.svg">
             <div id="services-title">Our Services</div>&nbsp;
             <div id="services-subtitle">You can choose across various materials form our false ceiling according to your
                 taste,
@@ -157,7 +157,7 @@
         <div id="footer-links">
             <div id="contact">
                 <div id="location">
-                    <img class="contact-icon" src="../assets/location.svg" alt="Location Icon" />
+                    <img class="contact-icon" src="../assets/svg/locationsvg/" alt="Location Icon" />
                     <div class="contact-details">
                         <div class="detail-title">Address</div>
                         <div class="detail-subtitle">29 - B, RABINDRA SARANI, 3RD FLOOR, SUITE 11(W) KOLKATA - 700 073,
@@ -166,14 +166,14 @@
                     </div>
                 </div>
                 <div id="call-us">
-                    <img class="contact-icon" src="../assets/phone.svg" alt="Location Icon" />
+                    <img class="contact-icon" src="../assets/svg/phone.svg" alt="Location Icon" />
                     <div class="contact-details">
                         <div class="detail-title">Call Us</div>
                         <div class="detail-subtitle">+91-70001 62913</div>
                     </div>
                 </div>
                 <div id="email-us">
-                    <img class="contact-icon" src="../assets/email.svg" alt="Location Icon" />
+                    <img class="contact-icon" src="../assets/svg/email.svg" alt="Location Icon" />
                     <div class="contact-details">
                         <div class="detail-title">Email Us</div>
                         <div class="detail-subtitle">sara.sanders@gmail.com</div>
@@ -183,15 +183,15 @@
             <div id="social-links">
                 <div id="social-links-title">Social Links</div>
                 <div id="whatsapp">
-                    <img class="social-icon" src="../assets/whatsapp.svg">
+                    <img class="social-icon" src="../assets/svg/whatsapp.svg">
                     <a class="social-link-name" href="#">WhatsApp</a>
                 </div>
                 <div id="instagram">
-                    <img class="social-icon" src="../assets/instagram.svg">
+                    <img class="social-icon" src="../assets/svg/instagram.svg">
                     <a class="social-link-name" href="#">Instagram</a>
                 </div>
                 <div id="facebook">
-                    <img class="social-icon" src="../assets/facebook.svg">
+                    <img class="social-icon" src="../assets/svg/facebook.svg">
                     <a class="social-link-name" href="#">Facebook</a>
                 </div>
             </div>
